--- a/main.html
+++ b/main.html
@@ -3,13 +3,43 @@
 <html>
 
 <head>
-	<link rel="stylesheet" href="styles.css">
+	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 
 <body>
+<div class="container box">
+  <div class="row row1">
+    <div class="col-4 row1col1">
+      Row1 Col1
+    </div>
+    <div class="col-8 row1col2">
+      Row1 Col2
+    </div>
+  </div>
+  <div class="row row2">
+    <div class="col-4 ml-md-auto row2col1">
+      Row2 Col1
+    </div>
+    <div class="col-4 ml-md-auto row2col2">
+      Row2 Col2
+    </div>
+  </div>
+  <div class="row justify-content-center row3">
+    <div class="col-4 row3col1">
+      Row3 Col1
+    </div>
+    <div class="col-4 row3col2">
+      Row3 Col2
+    </div>
+  </div>
+</div>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
 </body>
 
