--- a/main.html
+++ b/main.html
@@ -9,27 +9,27 @@
 
 <body>
 <div class="container box">
-  <div class="row row1">
-    <div class="col-4 row1col1">
+  <div class="row r1">
+    <div class="col-4 r1c1">
       Row1 Col1
     </div>
-    <div class="col-8 row1col2">
+    <div class="col-8 r1c2">
       Row1 Col2
     </div>
   </div>
   <div class="row row2">
-    <div class="col-4 ml-md-auto row2col1">
+    <div class="col-4 ml-md-auto r2c1">
       Row2 Col1
     </div>
-    <div class="col-4 ml-md-auto row2col2">
+    <div class="col-4 ml-md-auto r2c2">
       Row2 Col2
     </div>
   </div>
-  <div class="row justify-content-center row3">
-    <div class="col-4 row3col1">
+  <div class="row justify-content-center r3">
+    <div class="col-4 r3c1">
       Row3 Col1
     </div>
-    <div class="col-4 row3col2">
+    <div class="col-4 r3c2">
       Row3 Col2
     </div>
   </div>
