--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 
 <body>
 <div class="container box">
-  <div class="row r1">
+  <div class="row r">
     <div class="col-4 r1c1">
       Row1 Col1
     </div>
@@ -17,7 +17,7 @@
       Row1 Col2
     </div>
   </div>
-  <div class="row row2">
+  <div class="row r">
     <div class="col-4 ml-md-auto r2c1">
       Row2 Col1
     </div>
@@ -25,7 +25,7 @@
       Row2 Col2
     </div>
   </div>
-  <div class="row justify-content-center r3">
+  <div class="row justify-content-center r ">
     <div class="col-4 r3c1">
       Row3 Col1
     </div>
