--- a/main.html
+++ b/main.html
@@ -8,28 +8,30 @@
 </head>
 
 <body>
+	
+	
 <div class="container box">
   <div class="row r">
-    <div class="col-4 r1c1">
+    <div class="col-4 col-md-4 r1c1 col-sm-6">
       Row1 Col1
     </div>
-    <div class="col-8 r1c2">
+    <div class="col-8 col-md-8 r1c2 col-sm-6">
       Row1 Col2
     </div>
   </div>
-  <div class="row r">
-    <div class="col-4 ml-md-auto r2c1">
+  <div class="row r justify-content-between">
+    <div class="col-4 col-md-4 ml-md-auto r2c1 offset-md-2">
       Row2 Col1
     </div>
-    <div class="col-4 ml-md-auto r2c2">
+    <div class="col-4 col-md-4 ml-md-auto r2c2">
       Row2 Col2
     </div>
   </div>
   <div class="row justify-content-center r ">
-    <div class="col-4 r3c1">
+    <div class="col-4 col-md-4 r3c1 col-sm-6">
       Row3 Col1
     </div>
-    <div class="col-4 r3c2">
+    <div class="col-4 col-md-4 r3c2 col-sm-6">
       Row3 Col2
     </div>
   </div>
